--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
+body {
+    background: #CCCCCC;
+}
+
+h1 {
+    text-align: center;
+}
+
 p {
     text-align: center;
-    background: #CCCCCC;
+}
+
+#missão {
+    font-size: 20px;
+}
+
+em strong {
+    color: darkred;
 }
