--- a/style.css
+++ b/style.css
@@ -6,7 +6,15 @@ body {
     width: 100%;
 }
 
-h1 {
+.principal {
+    background: #CCCCCC;
+}
+
+.titulo-principal {
+    padding-left: 20px;
+}
+
+.titulo-centralizado {
     text-align: center;
 }
 
@@ -20,4 +28,28 @@ p {
 
 em strong {
     color: darkred;
+}
+
+.itens {
+    font-style: italic;
+}
+
+.beneficios {
+    background: #FFFFFF;
+    padding: 20px;
+}
+
+h2 {
+    text-align: center;
+}
+
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+.imagembeneficios {
+    width: 50%;
 }
